Fixes line-spacing (#61)
* animated links

* small fixes

* COrrected hover position for years + months

* fix for odd line-height in Brexit stream page

--- a/styles/article-list.scss
+++ b/styles/article-list.scss
@@ -10,7 +10,7 @@
 
 .n-storylines__article {
 	margin-bottom: 20px;
-
+	line-height: 24px;
 	// styled bullet points
 	&::before {
 		counter-increment: list;
